test/files/neg/inlineIndyLambdaPrivate/Test_2.scala
//> using options -opt:inline:** -Yopt-inline-heuristics:everything -Wopt:_ -Werror
class Test {
  def foo = A_1.test
}
